--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.37.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
