--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-map-gl": "^7.0.19",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
